Modify heatmap feature